added navigation bar

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -2,7 +2,7 @@
 {
   font-family: "Open Sans";
   src:
-    url("assets/OpenSans-Regular.ttf")
+    url("assets/fonts/OpenSans-Regular.ttf")
     format("truetype");
 }
 
@@ -11,6 +11,6 @@
   font-family: "Open Sans";
   font-weight: bold;
   src:
-    url("assets/OpenSans-Bold.ttf")
+    url("assets/fonts/OpenSans-Bold.ttf")
     format("truetype");
 }
